--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -30,4 +30,4 @@ once_cell = "1.20.2"
 rusty-chromaprint = { version = "0.3.0" }
 
 [dev-dependencies]
-clap = "4.5.9"
+clap = { version = "4.5.9", features = ["derive"] }
