--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -9,4 +9,13 @@ name = "sync"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = "1.0.97"
+blake3 = "1.7.0"
+rust_decimal = "1.37.1"
+serde = "1.0.219"
 thiserror = "2.0.12"
+uuid = "1.16.0"
+sea-orm = { version = "1.1.0" }
+lazy_static = "1.5.0"
+serde_json = "1.0.140"
+chrono = "0.4.40"
