--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -14,7 +14,7 @@ blake3 = "1.7.0"
 rust_decimal = "1.37.1"
 serde = "1.0.219"
 thiserror = "2.0.12"
-uuid = "1.16.0"
+uuid = { version = "1.16.0", features = ["serde"] }
 sea-orm = { version = "1.1.0" }
 lazy_static = "1.5.0"
 serde_json = "1.0.140"
