--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 anyhow = "1.0.97"
 blake3 = "1.7.0"
 rust_decimal = "1.37.1"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 uuid = { version = "1.16.0", features = ["serde"] }
 sea-orm = { version = "1.1.0" }
@@ -20,4 +20,4 @@ lazy_static = "1.5.0"
 serde_json = "1.0.140"
 chrono = "0.4.40"
 log = "0.4.27"
-tokio = "1.44.1"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
