--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -15,14 +15,18 @@ rust_decimal = "1.37.1"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 uuid = { version = "1.16.0", features = ["serde"] }
+sea-orm = "1.1.0"
+lazy_static = "1.5.0"
+serde_json = "1.0.140"
+chrono = "0.4.40"
+log = "0.4.27"
+tokio = "1"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 sea-orm = { version = "1.1.0", features = [
     "sqlx-sqlite",
     "runtime-async-std-native-tls",
     "macros",
     "debug-print",
 ] }
-lazy_static = "1.5.0"
-serde_json = "1.0.140"
-chrono = "0.4.40"
-log = "0.4.27"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
