--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0.140"
 chrono = "0.4.40"
 log = "0.4.27"
 tokio = "1"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
