--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -24,10 +24,11 @@ tokio = "1"
 once_cell = "1.21.3"
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 sea-orm = { version = "1.1.0", features = [
     "sqlx-sqlite",
     "runtime-async-std-native-tls",
     "macros",
     "debug-print",
 ] }
+uuid = { version = "1.16.0", features = ["v4"] }
