--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -23,6 +23,9 @@ log = "0.4.27"
 tokio = "1"
 once_cell = "1.21.3"
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg_attr(tarpaulin)"] }
+
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 sea-orm = { version = "1.1.0", features = [
