--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -24,7 +24,7 @@ tokio = "1"
 once_cell = "1.21.3"
 
 [lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ["cfg_attr(tarpaulin)"] }
+unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin)'] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
