--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
+          flutter-version: 3.24.0
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
