--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -51,4 +51,10 @@ thiserror = "2.0.3"
 uuid = { version = "1.11.0", features = ["v4"] }
 regex = "1.11.1"
 tempfile = "3.17.1"
-axum = "0.8.2"
+axum = { version = "0.8.2", features = ["tokio"] }
+
+[dev-dependencies]
+hyper = "1.6.0"
+reqwest = "0.12.18"
+portpicker = "0.1.1"
+env_logger = "0.11.8"
