--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@
 # various Rust configurations.
 
 [workspace]
-members = ["native/hub", "native/requests", "cli", "tag-editor", "discovery", "sync"]
+members = ["native/hub", "native/requests", "cli", "tag-editor", "discovery", "sync", "fsio"]
 resolver = "2"
 
 [patch.crates-io]
