--- a/fsio/Cargo.toml
+++ b/fsio/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fsio"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [lib]
 name = "fsio"
@@ -10,5 +10,12 @@ path = "src/lib.rs"
 [dependencies]
 anyhow = "1.0.98"
 log = "0.4.27"
-thiserror = "2.0.12"
+thiserror = "1.0"
 walkdir = "2.5.0"
+tokio = { version = "1", features = ["full"] }
+async-trait = "0.1"
+futures = "0.3"
+
+[target.'cfg(target_os = "android")'.dependencies]
+rusqlite = { version = "0.32.0", features = ["bundled"] }
+ndk-saf = { git = "https://github.com/Losses/Rust-SAF", version = "0.1.0" }
