--- a/fsio/Cargo.toml
+++ b/fsio/Cargo.toml
@@ -15,7 +15,11 @@ walkdir = "2.5.0"
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
 futures = "0.3"
+dunce = "1.0.5"
 
 [target.'cfg(target_os = "android")'.dependencies]
 rusqlite = { version = "0.32.0", features = ["bundled"] }
 ndk-saf = { git = "https://github.com/Losses/Rust-SAF", version = "0.1.0" }
+
+[dev-dependencies]
+tempfile = "3.20.0"
