--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,78 +9,78 @@ jobs:
       image: ubuntu-2204:2023.07.1
     resource_class: arm.medium
     steps:
-    - run:
-        name: Install dependencies
-        command: |
-          sudo apt-get update
-          sudo apt-get install unzip liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev libayatana-appindicator3-dev zip libnotify-dev
-          sudo apt remove --purge protobuf-compiler
-    - run:
-        name: Setup Flutter Environment Variables
-        command: |
-          echo 'export PATH="$PATH:$HOME/flutter/bin:$HOME/.pub-cache/bin:$PATH"' >> "$BASH_ENV"
-    - rust/install:
-        version: stable
-    - run:
-        name: Download Flutter
-        command: |
-          git clone --branch 3.32.8 --depth 1 https://github.com/flutter/flutter.git ../flutter
-    - run:
-        name: Run Flutter setup
-        command: |
-          flutter --version
-    - run:
-        name: Test if Flutter works
-        command: |
-          flutter doctor
-    - checkout
-    - run:
-        name: Flutter pub get
-        command: flutter pub get
-    - run:
-        name: Install the Rust dependencies
-        command: cargo install rinf_cli
-    - run:
-        name: Generate message files
-        command: rinf gen
-    - run:
-        name: Build linux
-        no_output_timeout: 30m
-        command: flutter build linux --release --verbose
-    - run:
-        name: Add assets
-        command: |
-          mkdir -p build/linux/arm64/release/bundle/assets
-          cp -r assets/icons/Papirus build/linux/arm64/release/bundle/assets/icons
-          cp assets/source/linux/* build/linux/arm64/release/bundle/assets
-    - run:
-        name: Package artifact
-        command: |
-          cd build/linux/arm64/release/bundle/
-          TAG=${CIRCLE_TAG}
-          zip -r ../Rune-${TAG}-linux-aarch64.zip .
-    - run:
-        name: Upload to GitHub Release
-        command: |
-          TAG=${CIRCLE_TAG}
-          ARTIFACT="build/linux/arm64/release/Rune-${TAG}-linux-aarch64.zip"
-          
-          # GitHub CLI installation
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt update
-          sudo apt install gh
-          
-          # Upload to GitHub release
-          gh release upload ${TAG} ${ARTIFACT} --clobber
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install unzip liblmdb0 jq alsa-base alsa-source librust-alsa-sys-dev libasound2-dev liblmdb-dev clang cmake ninja-build pkg-config libgtk-3-dev dpkg-dev libayatana-appindicator3-dev zip libnotify-dev
+            sudo apt remove --purge protobuf-compiler
+      - run:
+          name: Setup Flutter Environment Variables
+          command: |
+            echo 'export PATH="$PATH:$HOME/flutter/bin:$HOME/.pub-cache/bin:$PATH"' >> "$BASH_ENV"
+      - rust/install:
+          version: stable
+      - run:
+          name: Download Flutter
+          command: |
+            git clone --branch 3.32.8 --depth 1 https://github.com/flutter/flutter.git ../flutter
+      - run:
+          name: Run Flutter setup
+          command: |
+            flutter --version
+      - run:
+          name: Test if Flutter works
+          command: |
+            flutter doctor
+      - checkout
+      - run:
+          name: Flutter pub get
+          command: flutter pub get
+      - run:
+          name: Install the Rust dependencies
+          command: cargo install rinf_cli
+      - run:
+          name: Generate message files
+          command: rinf gen
+      - run:
+          name: Build linux
+          no_output_timeout: 30m
+          command: flutter build linux --release --verbose
+      - run:
+          name: Add assets
+          command: |
+            mkdir -p build/linux/arm64/release/bundle/assets
+            cp -r assets/icons/Papirus build/linux/arm64/release/bundle/assets/icons
+            cp assets/source/linux/* build/linux/arm64/release/bundle/assets
+      - run:
+          name: Package artifact
+          command: |
+            cd build/linux/arm64/release/bundle/
+            TAG=${CIRCLE_TAG}
+            zip -r ../Rune-${TAG}-linux-aarch64.zip .
+      - run:
+          name: Upload to GitHub Release
+          command: |
+            TAG=${CIRCLE_TAG}
+            ARTIFACT="build/linux/arm64/release/Rune-${TAG}-linux-aarch64.zip"
+
+            # GitHub CLI installation
+            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+            sudo apt update
+            sudo apt install gh
+
+            # Upload to GitHub release
+            gh release upload ${TAG} ${ARTIFACT} --clobber
 
   build-android:
     docker:
       - image: cimg/base:current
-        
+
     steps:
       - checkout
-      
+
       - run:
           name: Fetch complete history
           command: |
@@ -90,29 +90,29 @@ jobs:
           name: Get commit hash
           command: |
             echo 'export COMMIT_HASH=$(git rev-parse --short HEAD)' >> $BASH_ENV
-            
+
       - run:
           name: Install Nix
           command: |
             # Install Nix
             curl -L https://nixos.org/nix/install | sh
-            
+
             # Source nix
             . $HOME/.nix-profile/etc/profile.d/nix.sh
-            
+
             # Add Nix binary directory to PATH
             export PATH=$HOME/.nix-profile/bin:$PATH
-            
+
             echo ". $HOME/.nix-profile/etc/profile.d/nix.sh" >> $BASH_ENV
             echo "export PATH=$HOME/.nix-profile/bin:\$PATH" >> $BASH_ENV
-            
+
             # Source the updated environment
             source $BASH_ENV
-            
+
             # Verify installation
             which nix
             nix --version
-            
+
       - run:
           name: Setup OpenSSL
           command: |
@@ -129,15 +129,10 @@ jobs:
             nix --extra-experimental-features "nix-command flakes" develop . --command flutter pub get
 
       - run:
-          name: Install rinf_cli
+          name: Install rinf_cli and Generate Rinf files
           command: |
-            nix --extra-experimental-features "nix-command flakes" develop . --command cargo install rinf_cli
+            nix --extra-experimental-features "nix-command flakes" develop . --command bash -c "cargo install rinf_cli && rinf gen"
 
-      - run:
-          name: Generating Rinf files
-          command: |
-            nix --extra-experimental-features "nix-command flakes" develop . --command rinf gen
-            
       - run:
           name: Build APKs
           command: |
@@ -157,14 +152,14 @@ jobs:
           name: Upload to GitHub Release
           command: |
             TAG=${CIRCLE_TAG}
-        
+
             # Download and install GitHub CLI
             curl -L "https://github.com/cli/cli/releases/download/v2.60.1/gh_2.60.1_linux_amd64.tar.gz" | tar xz
             sudo mv gh_2.60.1_linux_amd64/bin/gh /usr/local/bin/
-            
+
             # Verify installation
             gh --version
-            
+
             # Upload to GitHub release
             gh release upload ${TAG} "dist/Rune-${TAG}-android-armeabi-v7a.apk" --clobber
             gh release upload ${TAG} "dist/Rune-${TAG}-android-arm64-v8a.apk" --clobber
