--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,6 @@ dependencies:
   reorderables: ^0.6.0
   material_color_utilities: ^0.11.1
   get_storage: ^2.1.1
-  file_selector: ^1.0.3
   hashlib: ^1.19.2
   rxdart: ^0.28.0
   flutter_shaders: ^0.1.2
@@ -93,6 +92,8 @@ dependencies:
   clipboard: ^0.1.3
   asn1lib: ^1.5.8
   badges: ^3.1.2
+  fast_file_picker: ^0.4.7
+  file_selector: ^1.0.3
 
 dev_dependencies:
   build_runner: ^2.4.11
