--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -42,6 +42,8 @@ windows = { version = "0.44.0", features = [
 ] }
 once_cell = "1.20.2"
 simple_channel = { path = "../simple-channel" }
+url = "2.5.7"
+stream-download = "0.22.4"
 
 [target.'cfg(not(any(target_os = "android")))'.dependencies]
 souvlaki = { git = "https://github.com/Losses/souvlaki", rev = "e60e9b9a6a2774306718a0c561609083f1acc617", default-features = false, features = ["use_zbus"] }
