--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -21,4 +21,6 @@ anyhow = {version="1.0.86",  features = ["backtrace"] }
 image = "0.25.2"
 palette_extract = "0.1.0"
 fsio = { version = "0.1.0", path = "../fsio" }
+tokio = { version = "1", features = ["full"] }
+futures = "0.3.30"
 
