--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -87,7 +87,7 @@ bcrypt = "0.17.0"
 rpassword = "7.3.1"
 bincode = { version = "2.0.1", features = ["serde"] }
 fsio = { version = "0.1.0", path = "../../fsio" }
-infer = "0.18.0"
+mimetype-detector = "0.1.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
