--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -35,7 +35,7 @@ deunicode = "1.6.0"
 paste = "1.0.15"
 chrono = "0.4.38"
 tokio-util = "0.7.11"
-anyhow = { version = "1.0.86", features = ["backtrace"] }
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 rayon = "1.10.0"
 seq-macro = "0.3.5"
 once_cell = "1.19.0"
@@ -54,6 +54,7 @@ axum = { version = "0.8.2", features = ["tokio"] }
 reqwest = "0.12.18"
 fsio = { version = "0.1.0", path = "../fsio" }
 stream-download = "0.22.4"
+http-request = { version = "0.1.0", path = "../http-request" }
 
 [dev-dependencies]
 hyper = "1.6.0"
